force-app/main/default/objects/nPortal__Security_Badge__c/nPortal__Security_Badge__c.object-meta.xml
<CustomObject>
    <description>The Security Badge object allows administrators to configure security badges in Customer Portal.</description>
    <label>Security Badge</label>
    <nameField>
        <label>Security Badge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Badges</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>