force-app/main/default/objects/nPortal__Security_Badge__c/fields/nPortal__Alt_Text__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Alt_Text__c</fullName>
    <description>Administrators populate this text field with the alternative text for screen readers.</description>
    <inlineHelpText>Enter alternative text for the security badge.</inlineHelpText>
    <label>Alt Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>