force-app/main/default/objects/nPortal__Security_Badge__c/fields/nPortal__Document_ID__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Document_ID__c</fullName>
    <description>Administrators populate this text field with the Salesforce ID of the Document record that holds the security badge image.</description>
    <inlineHelpText>Enter the Salesforce ID from the Document record of the security badge.</inlineHelpText>
    <label>Document ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>