force-app/main/default/objects/nPortal__Security_Badge__c/fields/nPortal__Is_Decorative__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Is_Decorative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this checkbox field to indicate if the screen reader reads off the security badge.</description>
    <inlineHelpText>Select this field to hide the security badge from the screen reader.</inlineHelpText>
    <label>Is Decorative</label>
    <type>Checkbox</type>
</CustomField>