force-app/main/default/objects/nPortal__Security_Badge__c/fields/nPortal__Is_Portal_Enabled__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Is_Portal_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this checkbox field to indicate if the Security Badge is automatically shared with Customer Portal users.</description>
    <inlineHelpText>Select this field to display the Security Badge to Customer Portal users.</inlineHelpText>
    <label>Is Portal Enabled</label>
    <type>Checkbox</type>
</CustomField>