force-app/main/default/objects/nPortal__Security_Badge__c/fields/nPortal__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>nPortal__lookupKey__c</fullName>
    <description>The system populates this lookup field with a unique identifier to help facilitate data migration between sandbox and production orgs. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field automatically displays the unique identifier for data migration.</inlineHelpText>
    <label>lookupKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>